Fix bird size and horizontal scroll on mobile safari

--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,16 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
   width: 100%;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
-  overflow-y: scroll !important;
   overflow-x: hidden !important;
   position: 'relative';
 }
